# Internship_Musset_Jeremy

./: CMakeLists.txt  README.md  rounding_error.c
Code/Rouding_error/: rouding_error.py  rounding_error.c
Examples/Example1/: Makefile  test  test.cpp
Results/Serial/assembler/: cblas_mkl.s  dot_blaspp.s
Results/Serial/assembler/blaspp/: blaspp-O3-march.s  blaspp-O3.s  blaspp-march.s
Results/Serial/assembler/common/: common-O3-march.s  common-O3-march_function.s  common-O3._function.s  common-march.s  common._function.s
Results/Serial/assembler/mkl/: mkl-O3.s
Results/Serial/assembler/standard/: standard-O3-mavx512f-funsafe-math-optimizations.s  standard-march.s
Results/Standard/Serial/assembler/blaspp/: blaspp.s
Results/Standard/Serial/assembler/common/: common-O3.s  common.s
Results/Standard/Serial/assembler/mkl/: mkl-O3-march.s  mkl-march.s  mkl.s
Results/Standard/Serial/assembler/standard/: standard-O3-march=native-funsafe-math-optimizations.s  standard-O3.s  standard.s
Test/: Makefile
Test/Test1/: Makefile  test  test.cpp
Test/Test2/: test.cpp
include/: compare.h  dot_product.h  error_free.h  gen_random_number.h  parallelisation.h  serial.h  test.h
main/: Makefile  README.md  comp_dot_prod  compare_dot_product.cpp  dot_prod  dot_product.cpp
muse/: CMakeLists.txt  Makefile  execution.slurm  par_dot_prod  par_dot_prod.cpp  test  test.cpp
parallel/: Makefile  execution.slurm  par_dot_prod  par_dot_prod.cpp  test  test.cpp
sequential/: CMakeLists.txt  Makefile  dot_product.cpp  seq_dot_prod  seq_dot_prod.cpp
src/: CMakeLists.txt
src/compare/: Makefile  compare_cond  compare_cond.cpp  compare_cuda.cu  compare_dot_prod.cc  compare_dot_product  compare_dot_product.cpp  compare_par  compare_par.cpp  compare_th.cpp  compare_time  compare_time.cpp  compare_time_exp  compare_time_novec  compare_time_novec.cpp  compare_time_print  compare_time_print.cpp  compare_time_vec  courbe  courbe.cpp  perf.data.old  test.txt
src/compare/assembler/: Makefile  Rare_Blas.s  common.s  compare_dot_prod.s  compare_par.s  correct_rounding.s  eft.s  gen_random_vector.s  parallelisation.s  sequential.s
src/compare/debog/: Makefile  valgrind00-compare_dot_prod.gcda  valgrind00-correct_rounding.gcda  valgrind00-correct_rounding.gcno  valgrind00-gen_random_vector.gcda  valgrind00-gen_random_vector.gcno  valgrind00-parallelisation.gcda  valgrind00-parallelisation.gcno  valgrind00.cpp
src/data/: CMakeLists.txt  vec1.txt  vector0.txt  vector1.txt
src/dot_product/: CMakeLists.txt  README.md  Rare_Blas.cc  common.cc  correct_rounding.c  correct_rounding.cc  dot  dot_prod  dot_product.cpp  error_free.cc  parallelisation.cc  sequential.cc  twoprod.cc
src/generation/: CMakeLists.txt  README.md  gen  gen_random_number.cc  gen_random_vector.cc  gen_vector.cc  generation  generation.cpp  vec  vec.cpp
src/parallel/: Makefile
src/rounding_error/: CMakeLists.txt  README.md  rounding_error.c  rounding_error.py
src/sequential/: execution.slurm  seq_dot_prod.cpp
src/test/: README.md  test_parallelisation.cc  test_sequential.cc
tmp/compare/: Compare  Compare.cpp  Makefile  Rare_Blas.s  a.out  callgrind.out.48789  common.s  compare_bytes_flops  compare_bytes_flops.cpp  compare_circle.cir  compare_cond  compare_cond.cpp  compare_cuda.cu  compare_dot_prod.cc  compare_dot_prod.s  compare_dot_product.cpp  compare_par.cpp  compare_sycl.cpp  compare_time  compare_time copy.cpp  compare_time.cpp  compare_time_novec  compare_time_novec.cpp  compare_time_print  compare_time_print.cpp  compare_time_vec  compare_time_vec.cpp  compare_time_vec1  compare_time_vec1.cpp  compare_time_vec1.s  compare_time_vec2  compare_time_vec2.cpp  compare_time_vec2.s  compare_time_vec3  compare_time_vec3.cpp  compare_time_vec3.s  compare_time_vec4  compare_time_vec4.cpp  compare_time_vec4.s  compare_time_vec5  (+21 more)
tmp/compare/assembler/: Makefile  Rare_Blas.s  common.s  compare_dot_prod.s  correct_rounding.s  eft.s  gen_random_vector.s  parallelisation.s  sequential.s  test
tmp/compare/debog/: callgrind.out.18417  callgrind.out.48183  google00.cpp  valgrind00-Rare_Blas.gcda  valgrind00-Rare_Blas.gcno  valgrind00-common.gcda  valgrind00-common.gcno  valgrind00-compare_dot_prod.gcno  valgrind00-eft.gcda  valgrind00-eft.gcno  valgrind00-google00.gcno  valgrind00-sequential.gcda  valgrind00-sequential.gcno  valgrind00-valgrind00.gcda  valgrind00-valgrind00.gcno
tmp/dot_product/: CMakeLists.txt  Makefile  Ozaki.cc  Rare_Blas.cc  Rare_blas_dot.cpp  Rare_blas_dot_tmp.cpp  correct_rounding  correct_rounding.cc  dot_prod  eft.cc  parallelisation.cc  rare  sequential.cc
tmp/generation/: gen_random_vector.cc  generation  generation.cpp
tmp/main/: Makefile  compare_cond  compare_cond.cpp  compare_cond_o  compare_cond_o.cpp  compare_cond_py  compare_cond_py.cpp  compare_time  compare_time.cpp  compare_time_o  compare_time_o.cpp  courbe  courbe.cpp  courbe.py  debog  debog.cpp  debog2  debog2.cpp  print_time  print_time.cpp  saveprint.txt  testgen.cpp
tmp/parallel/: par_dot_prod  par_dot_prod.cpp
tmp/rounding_error/: CMakeLists.txt  round
tmp/sequential/: Makefile  seq_dot_prod
tmp/test/: test_parallelisation.cc
